<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a4c3a0"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".papelada_info">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/titleComoFazer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtIconDocumentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="120dp"
                android:text="@string/iconDocumentos"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtIconContratos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:text="@string/iconContratos"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtIconEscrituras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="60dp"
                android:text="@string/iconEscrituras"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imgID"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_gravity="center"
                android:contentDescription="@string/iconDocumentos"
                android:src="@drawable/iconfinder_user_id_285641" />

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>