<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#a4c3a0"
    android:fitsSystemWindows="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".papelada_doc">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtPapeladaDoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/titleEnviarPapelada"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/papeladaIdentidades"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/iconfinder_id_card_job_seeker_employee_unemployee_work_2620518" />

            <ImageView
                android:id="@+id/papeladaContratos"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/iconfinder_sertificate_job_seeker_employee_unemployee_work_2620502" />

            <ImageView
                android:id="@+id/papeladaEscrituras"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="30dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/iconfinder_cv_job_seeker_employee_unemployee_work_2620524" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtIconDocumentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginTop="60dp"
                android:text="@string/iconDocumentos"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtIconContratos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginTop="60dp"
                android:text="@string/iconContratos"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtIconEscrituras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="170dp"
                android:layout_marginTop="60dp"
                android:text="@string/iconEscrituras"
                android:textSize="24sp" />

        </LinearLayout>

    </RelativeLayout>


</FrameLayout>