<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a4c3a0"
        android:orientation="vertical"
        android:visibility="visible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/txtDigital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="120dp"
            android:text="@string/titleColoqueDigital"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imgDigital"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/iconfinder_touch_id_363335" />

        <Button
            android:id="@+id/btnProximo"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="550dp"
            android:background="#E8F3DB"
            android:text="@string/botaoProximo"
            android:textColor="@color/textAppG">

        </Button>

    </RelativeLayout>

</LinearLayout>