<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/telalogin"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputEmail"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_login"
                android:hint="@string/emailLogin"
                android:inputType="textEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textSize="12sp"
                android:textStyle="bold" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtinputSenha"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtinputEmail"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_senha"
                android:ems="10"
                android:hint="@string/senhaLogin"
                android:inputType="textPassword"
                android:textColor="#222121"
                android:textColorHint="#222121"
                android:textSize="12sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:textColor="@color/textAppG"
            android:layout_below="@id/txtinputSenha"
            android:layout_centerInParent="true"
            android:text="@string/botaoLogin"
            android:background="#E8F3DB">

        </Button>

        <TextView
            android:id="@+id/edRegistro"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLogin"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:ems="10"
            android:focusable="true"
            android:hint="@string/botaoRegistro"
            android:padding="16dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/imgDigital"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:clickable="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/edRegistro"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/iconfinder_note_job_seeker_employee_unemployee_work_2620509" />

    </RelativeLayout>

</LinearLayout>